feat: Created a custom pytorch dataset so we can train torch vision detection models on our chosen dataset.  Also trained and validated a simple FastRCNN on it just to make sure it works.

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ tests/.cache/v/cache/lastfailed
 # YOLO
 notebooks/runs
 
+# PyTorch
+**.pth
+
 ##
 ## R Section - See https://github.com/github/gitignore/blob/master/R.gitignore
 ##
